--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "js-cookie": "^2.2.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
